Change id to larger font and add white-space no wrap to prevent collapse

--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,10 @@ header {
 
 #brand {
   font-weight: bold;
-  font-size: 25px;
+  font-size: 40px;
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
 
 #brand a {
